# UniV

./: .gitignore  Cargo.toml  README.md  build.rs  dev_util.rs  publish.py
.github/workflows/: publish.yml  test.yml  test_linux.yml  test_macos.yml  test_windows.yml
algos/distributions/: Linear.uni  quadratic.py  quintic.py  sineWave.py
algos/pivotSelections/: classic.py
algos/rotations/: cycleReverse.py  griesMills.py  helium.py  tripleReverse.py
algos/shuffles/: adversaries.py  basic.py  basic.uni  sawtooth.uni  scrambledPortions.py  sorted.uni
algos/sorts/: AdjacencyPancakeSort.py  AdvancedLogMergeSort.py  AeosQuickSort.py  AmericanFlagSort.py  AndreySort.py  BinaryDoubleInsertionSort.py  BinaryInsertionSort.py  BitonicSort.py  BogoSort.py  BoseNelsonSort.py  BottomUpMergeSort.py  BozoSort.py  BubbleSort.uni  BufMerge2.py  ChaliceSort.py  CircleSort.py  CombSort.py  CombSort3Smooth.py  CountingSort.py  CycleSort.py  DualPivotQuickSort.py  EctaSort.py  FeatureSort.py  FoldSort.py  GnomeSort.py  GrailSort.py  HeliumSort.py  InPlaceStableCycleSort.py  InsertionSort.py  KitaSort.py  KotaSort.py  LibrarySort.py  LithiumSort.py  LogSort.py  MaxHeapSort.py  MergeInsertionSort.py  MergeSort.uni  MergeSortParallel.py  NewShuffleMergeSort.py  OddEvenMergeSort.py  (+29 more)
algos/utils/: BitArray.py  KWayMerge.py  blockMerging.py  utils.py  utils.uni
automations/: grailSort.ual  runAllShuffles.ual  runAllSorts.ual
profiles/: h264-nvenc-fast.json  h264-nvenc.json  h264-sw-fast.json  h264-sw.json
resources/: univ.html
src/: algos.rs  dev.rs  ffmpeg.rs  header.uni  heatmap.rs  highlights.rs  main.rs  mixer.rs  settings.rs  sound.rs  value.rs  visual.rs
src/api_layers/: arrayv.rs  java.rs  osv.rs  python.rs  unil.rs  univ.rs
src/automation/: ast.rs  mod.rs  parser.rs  scanner.rs  tokens.rs
src/compiler/: analyzer.rs  environment.rs  mod.rs  type_system.rs
src/dev/: mod.rs
src/gui/: automation_selection.rs  configure_stats.rs  file_dialog.rs  loading_panel.rs  mod.rs  paused.rs  popup.rs  run_all_shuffles.rs  run_all_sorts.rs  run_sort.rs  selection.rs  settings.rs  text_input.rs
src/language_layers/: java.rs  python.rs  unil.rs
src/sounds/: default_engine.rs  soundfont_engine.rs  square_wave.rs
src/unil/: ast.rs  mod.rs  parser.rs  scanner.rs  swap_recognition.rs  tokens.rs
src/univm/: bytecode.rs  environment.rs  mod.rs  object.rs
src/utils/: api_hook.rs  colormaps.rs  lang.rs  language_hook.rs  mod.rs  object.rs  sound.rs
src/utils/gfx/: base_circle_visual.rs  base_data_trace.rs  (+4 more)
src/visuals/: bw_gradient_bar_graph.rs  bw_gradient_circle.rs  bw_gradient_data_trace.rs  color_circle.rs  custom_image.rs  data_trace.rs  heat_bar_graph.rs  heat_scatter_plot.rs  rainbow_bar_graph.rs  rainbow_scatter_plot.rs  scatter_plot.rs  scrambled_rainbow_bar_graph.rs  scrambled_rainbow_scatter_plot.rs  white_bar_graph.rs
