[package]
name = "univ"
version = "2025.9.5"
edition = "2024"

[profile.dev]
opt-level = 3 # in debug mode with no optimizations, the program is very slow

[profile.release]
lto = true

[features]
default = ["full"]
# versions
full = ["language_layers", "ffmpeg"]
lite = ["ffmpeg", "dep:bincode", "alanglib/sourcepos_bin_decode"]
dev = ["language_layers", "dep:bincode", "alanglib/sourcepos_bin_encode"]
# internal
language_layers = ["dep:libcst", "dep:tree-sitter", "dep:tree-sitter-java"]
ffmpeg = ["dep:flate2", "dep:reqwest"]

[dependencies]
# core
enum_dispatch = "0.3.13"
lazy_static = "1.5.0"
rand = "0.9.0"

# serialization/deserialization
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
bincode = { version = "2.0.1", optional = true }
 
# audio/video
raylib = "5.5.1"
imgui = "0.12.0"
raylib_imgui_rs = "0.1.0"
rodio = { version = "0.20.1", default-features = false }
rustysynth = "1.3.5"

# performance
nohash-hasher = "0.2.0"

# ffmpeg downloading
reqwest = { version = "0.12.22", features = ["blocking"], optional = true }
flate2 = { version = "1.1.2", optional = true }

# utilities
reblessive = "0.4.1"
num-format = "0.4.4"
ordered-float = "5.0.0"
alanglib = { version = "2025.9.10", git = "https://github.com/amari-calipso/alanglib.git", features = ["report_buf"] }

# parsers
libcst = { git = "https://github.com/amari-calipso/LibCST.git", version = "1.7.0", default-features = false, optional = true }
tree-sitter = { version = "0.25.3", optional = true }
tree-sitter-java = { version = "0.23.5", optional = true }

[build-dependencies]
convert_case = "0.6.0" # module files generation
image = "0.25.5" # resize and reformat logo for raylib icon
static_vcruntime = "2.0.0"
